--- a/requirements.txt
+++ b/requirements.txt
@@ -8,3 +8,10 @@ MarkupSafe==2.1.2
 Werkzeug==2.2.3
 zipp==3.15.0
 DBcm==2.1
+colorama==0.4.6
+exceptiongroup==1.1.1
+iniconfig==2.0.0
+packaging==23.1
+pluggy==1.0.0
+pytest==7.3.1
+tomli==2.0.1
