--- a/.github/workflows/pipeline.yaml
+++ b/.github/workflows/pipeline.yaml
@@ -4,11 +4,7 @@ on: [push]
 
 jobs:
   build-test:
-    runs-on: ${{ matrix.os }}
-    strategy:
-      matrix:
-        os: [ubuntu-latest, windows-latest]
+    runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v3
-    - run: pip install pylint
-    - run: pylint $(git ls-files '*.py')
+    - run: pip install -r requirements.txt
