--- a/.github/workflows/pipeline.yaml
+++ b/.github/workflows/pipeline.yaml
@@ -1,10 +1,21 @@
-name: Tests
+name: CI/CD Pipeline
 
 on: [push]
 
 jobs:
-  build-test:
+  build:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v3
     - run: pip install -r requirements.txt
+  test:
+    needs: build
+    runs-on: ${{ matrix.os }}
+    strategy:
+      matrix:
+        os: [ubuntu-latest, windows-latest]
+    steps:
+      - uses: actions/checkout@v3
+      - name: Run Tests
+      - run: pytest
+  
