--- a/.github/workflows/pipeline.yaml
+++ b/.github/workflows/pipeline.yaml
@@ -8,6 +8,7 @@ jobs:
     steps:
     - uses: actions/checkout@v3
     - run: pip install -r requirements.txt
+    - run: pytest
   test:
     needs: build
     runs-on: ${{ matrix.os }}
