--- a/.github/workflows/pipeline.yaml
+++ b/.github/workflows/pipeline.yaml
@@ -8,7 +8,10 @@ jobs:
     steps:
     - uses: actions/checkout@v3
     - run: pip install -r requirements.txt
-    - run: pytest
+    - uses: actions/upload-artifact@main
+      with:
+        name: project
+        path: ./
   test:
     needs: build
     runs-on: ${{ matrix.os }}
@@ -17,5 +20,9 @@ jobs:
         os: [ubuntu-latest, windows-latest]
     steps:
       - uses: actions/checkout@v3
+      - uses: actions/download-artifact@main
+        with:
+          name: project
+          path: ./
       - run: pytest
   
